src/test/resources/valid_programs/parenthesized_expression_elevates_precedence.notc
void main() {
    printInt((1 + 2) * 3);
    printInt(4 * (2 - 2));
    printInt((24 - 8) / 4);
    printInt(1 + (0 < 1));
    printInt((false && false) == false);
    printInt((true || true) != true);
}
