src/test/resources/syntax_errors/funcall_on_bool_exp.notc
void main() {
    (true == true)(1, 2);
}
